# cloud-custodian

./: .codecov.yml  .dockerignore  .gitignore  Makefile  OWNERS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.env  tox.ini
.devcontainer/: devcontainer.json  prep_container.sh
.github/workflows/: ci-main.yml  ci.yml  docker-ci.yml  docker.yml  (+2 more)
c7n/: cache.py  cli.py  commands.py  element.py  loader.py  mu.py  output.py  policy.py  provider.py  query.py  resolver.py  schema.py  sqsexec.py  structure.py  tags.py  utils.py  varfmt.py  version.py
docker/: c7n  c7n-distroless  c7n-kube  c7n-kube-distroless  c7n-left  c7n-org  c7n-org-distroless  cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
docs/: Makefile.sphinx
tests/: test_account.py  test_airflow.py  test_ami.py  test_apigw.py  test_appelb.py  test_appsync.py  test_asg.py  test_autotag.py  test_aws.py  test_cloudfront.py  test_cognito.py  test_config.py  test_connect.py  test_credentials.py  test_cwe.py  test_cwl.py  test_docker.py  test_dynamodb.py  test_ebs.py  test_ec2.py  test_ecs.py  test_efs.py  test_eks.py  test_elasticache.py  test_elasticsearch.py  test_emr.py  test_filters.py  test_fis.py  test_fsx.py  test_glue.py  test_handler.py  test_iam.py  test_kafka.py  test_kinesis.py  test_kms.py  test_lakeformation.py  test_lambda.py  test_loader.py  test_mu.py  test_networkmanager.py  (+24 more)
tools/c7n_kube/: pyproject.toml  readme.md  requirements.txt  setup.py  skaffold.yaml
tools/c7n_kube/.skaffold/: values.yaml
tools/c7n_kube/c7n_kube/: cli.py  entry.py  policy.py  query.py  server.py  utils.py
tools/c7n_kube/c7n_kube/actions/: core.py  labels.py  shared.py
tools/c7n_kube/c7n_kube/resources/: resource_map.py
tools/c7n_kube/c7n_kube/resources/apps/: daemonset.py  deployment.py  replicaset.py  statefulset.py
tools/c7n_kube/c7n_kube/resources/core/: configmap.py  namespace.py  node.py  pod.py  replicationcontroller.py  secret.py  service.py  serviceaccount.py  volume.py
tools/c7n_kube/c7n_kube/resources/rbac/: role.py
tools/c7n_kube/tests/: common_kube.py  test_actions.py  test_cli.py  test_custom_resource.py  test_k8s_server.py  test_kube.py  test_labels.py  test_policy.py  test_role.py
tools/c7n_kube/tests/data/events/: connect_pod_attach_options.json  connect_pod_exec_options.json  create_pod.json  create_policyreport.json  delete_pod.json
tools/c7n_left/: README.md  notes.md  pyproject.toml  requirements.txt  setup.py
tools/c7n_left/c7n_left/: cli.py  core.py  entry.py  filters.py  output.py  provider.py  test.py  utils.py
tools/c7n_left/c7n_left/providers/terraform/: graph.py  provider.py  resource.py
tools/c7n_left/tests/: test_left.py  test_left_test.py
tools/c7n_tencentcloud/: pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_tencentcloud/c7n_tencentcloud/: client.py  entry.py  provider.py  query.py  utils.py
tools/c7n_tencentcloud/c7n_tencentcloud/actions/: core.py  tags.py
tools/c7n_tencentcloud/c7n_tencentcloud/filters/: metrics.py
tools/c7n_tencentcloud/c7n_tencentcloud/resources/: ami.py  cbs.py  cbs_snapshot.py  clb.py  cls.py  cos.py  cvm.py  elasticsearch.py  mysql.py  mysql_backup.py  nat_gateway.py  resource_map.py  security_group.py  tag.py  tcr.py  vpc.py
tools/c7n_tencentcloud/tests/: conftest.py  tc_common.py  test_filter_metrics.py  test_provider.py  test_tc_ami.py  test_tc_cbs.py  test_tc_clb.py  test_tc_client.py  test_tc_cls.py  test_tc_elasticsearch.py  test_tc_mysql.py  test_tc_mysql_backup.py  test_tc_nat_gateway.py  test_tc_provider.py  test_tc_query.py  test_tc_security_group.py
tools/c7n_tencentcloud/tests/cassettes/test_tc_client/: TestClient.test_paging_offset.yaml  TestClient.test_paging_over_request_limit.yaml  TestClient.test_paging_token.yaml  TestClient.test_query_simple.yaml
tools/c7n_tencentcloud/tests/cassettes/test_tc_cvm/: TestCvmAction.test_cvm_start.yaml  TestCvmAction.test_cvm_stop.yaml  TestCvmAction.test_cvm_terminate.yaml
tools/c7n_tencentcloud/tests/cassettes/test_tc_mysql_backup/: TestMySQLBackUp.test_mysql_backup_create_time.yaml
tools/c7n_tencentcloud/tests/cassettes/test_tc_query/: TestQueryResourceManager.test_resources.yaml  TestQueryResourceManager.test_resources_no_pagination.yaml  TestResourcetQuery.test_filter.yaml  TestResourcetQuery.test_paged_filter.yaml
tools/c7n_tencentcloud/tests/cassettes/test_tc_tags/: TestCvmTagAction.test_cvm_marked_op_stop.yaml
tools/c7n_tencentcloud/tests/data/policies/: cvm.yaml
(+380 files in other folders)
