[tool.poetry]
name = "c7n"
version = "0.9.19"
description = "Cloud Custodian - Policy Rules Engine"
authors = ["Cloud Custodian Project"]
readme = "README.md"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
repository = "https://github.com/cloud-custodian/cloud-custodian"
license = "Apache-2.0"
packages = [
    { include = "c7n" }]
classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"

[tool.poetry.scripts]
custodian = 'c7n.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.12.31"
jsonschema = ">=3.0.0"
argcomplete = ">=1.12.3"
python-dateutil = "^2.8.2"
pyyaml = ">=5.4.0"
tabulate = "^0.8.6"
importlib-metadata = ">=4.11.1"
docutils = ">=0.14,<0.18"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.4"
placebo = "^0.9.0"
pytest-xdist = "^2.0"
pytest-cov = "^3.0.0"
pytest-terraform = "^0.6.0"
mock = "^4.0.1"
vcrpy = "^4.0.2"
aws-xray-sdk = "^2.5.0"
flake8 = "<4"
# tox = "^3.14.5"
jsonpatch = "^1.25"
psutil = "^5.7.0"
# wheel = "==0.30.0"
twine = "^3.1.1"
pytest-sugar = "^0.9.2"
click = "^8.0"
freezegun = "^1.2.2"
pytest-recording = "^0.12.1"

[tool.black]
skip-string-normalization = true


[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "--tb=native"
markers = ["functional", "skiplive"]
python_files = "test_*.py"
norecursedirs = ["data", "cassettes", "templates", "terraform"]
