[tool.poetry]
name = "c7n_tencentcloud"
version = "0.1.0"
description = "Cloud Custodian - Tencent Cloud Provider"
authors = ["Tencent Cloud"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
tencentcloud-sdk-python = "^3.0.715"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
